Lab 6 - Refactor and Modularize the Game using spring framework.